# wrapydb

./: README.md  pyproject.toml  setup.py
wrapydb/: WrapydbConnector.py  __init__.py  connector .py
